--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name    = "asteroids"
+name = "asteroids"
 version = "0.1.0"
-authors = ["Cliff Ingham <inghamn@gmail.com>"]
+authors = ["Cliff Ingham <inghamn@bloomington.in.gov>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amethyst = "~0"
+specs = "~0"
 
-[features]
-default = ["vulkan"]
-empty   = ["amethyst/empty" ]
-metal   = ["amethyst/metal" ]
-vulkan  = ["amethyst/vulkan"]
+[dependencies.sdl2]
+version = "~0"
+default-features = false
+features = ["image"]
