--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-specs = "~0"
-
-[dependencies.sdl2]
-version = "~0"
-default-features = false
-features = ["image"]
+sdl2 = "~0"
