--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,8 @@ edition = "2018"
 
 [dependencies]
 rand = "~0"
-sdl2 = "~0"
+
+[dependencies.sdl2]
+version = "~0"
+default-features = false
+features = ["gfx"]
